--- a/parse/cloud/views/map.ejs
+++ b/parse/cloud/views/map.ejs
@@ -20,6 +20,9 @@
         };
         var map = new google.maps.Map(document.getElementById("map-canvas"),
             mapOptions);
+        var latlngbounds = new google.maps.LatLngBounds();
+        map.setCenter(latlngbounds.getCenter());
+        map.fitBounds(latlngbounds); 
         <% locations.forEach(function(location) { %>
           <% var geopoint =  new Parse.GeoPoint(location.get("location")); %> 
           var myLatlng = new google.maps.LatLng(<%= geopoint.latitude%>,<%=geopoint.longitude%>);
@@ -28,8 +31,10 @@
             map: map,
             title:"Hello World!"
           });
+          latlngbounds.extend(myLatlng);
         <% }) %>
-        //map.setCenter(myLatLng);
+         map.setCenter(latlngbounds.getCenter());
+         map.fitBounds(latlngbounds);
       }
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
